# ShortSigns

./: .gitignore  Info.plist  Interface.py  README.md  ShortcutPlayer.py  app.py  bindings.py  keyboard.py  maps.json  pyproject.toml  simulate.py  video.py
CameraAI/: ai_vision.py  cam_ai.py  saved_gestures.json
components/: Interface.py  binding_entry.py  bindings.py  camera_selector.py  gesture_map.py  video.py
components/capture/: gesture.py  shortcut.py
