[project]
name = "bathhack"
version = "0.1.0"
description = ""
authors = [
    {name = "maurice-borys",email = "brillbusmorriss@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "pynput (>=1.8.1,<2.0.0)",
    "pyqt6 (>=6.10.2,<7.0.0)",
    "pyobjc-framework-cocoa (>=12.1,<13.0); sys_platform == 'darwin'",
    "mediapipe (>=0.10.33,<0.11.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)"

]

[tool.poetry]
# Stops dir having to match project name
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"